Uploaded first version

--- a/PortableAppManager/PortableAppManager.vbproj
+++ b/PortableAppManager/PortableAppManager.vbproj
@@ -26,7 +26,7 @@
     <DefineConstants>DEBUG=1,TRACE=1</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-    <OutputPath>..\..\</OutputPath>
+    <OutputPath>..\Release</OutputPath>
     <DebugSymbols>False</DebugSymbols>
     <DebugType>None</DebugType>
     <Optimize>True</Optimize>
